[package]
name = "brainduck-ui"
version = "0.1.0"
edition = "2021"
authors = ["Yonatan Reicher"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
brainduck = { path = "../brainduck", features = ["serde"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"

